feat: implement delete booking

--- a/src/app/booking/pages/flight-selection-page/flight-selection-page.component.html
+++ b/src/app/booking/pages/flight-selection-page/flight-selection-page.component.html
@@ -36,5 +36,5 @@
 
 <div class="navigation-btns">
   <button class="btn ghost-btn" (click)="navigateToMain()">Back</button>
-  <button class="btn primary-btn" (click)="navigateToPassengers()">Continue</button>
+  <button class="btn primary-btn" [disabled]="!selectedFlights.length" (click)="navigateToPassengers()">Continue</button>
 </div>
