feat: update flight item layout

--- a/src/app/booking/components/search-results/search-item/search-item.component.html
+++ b/src/app/booking/components/search-results/search-item/search-item.component.html
@@ -1,11 +1,11 @@
 <section class="flight-info">
   <div class="departure">
-    <p class="date">{{ flight.departureDateTime | date: 'EEE, dd LLL YYYY' : getFullUTC(flight.departureCity)}}</p>
+    <p class="date auxiliary-info">{{ flight.departureDateTime | date: 'EEE, dd LLL YYYY' : getFullUTC(flight.departureCity)}}</p>
     <div class="time">
       <p class="time-data">{{flight.departureDateTime  | date: 'HH:mm' :  getFullUTC(flight.departureCity)}}</p>
-      <p class="utc">UTC {{ getLocalUTC(flight.departureCity) }}</p>
+      <p class="utc auxiliary-info">UTC {{ getLocalUTC(flight.departureCity) }}</p>
     </div>
-    <p class="city">{{ flight.departureCity }}</p>
+    <p class="city auxiliary-info">{{ flight.departureCity }}</p>
   </div>
 
   <div class="flight-duration">
@@ -17,23 +17,25 @@
   </div>
 
   <div class="destination">
-    <p class="date">{{ flight.destinationDateTime | date: 'EEE, dd LLL YYYY' : getFullUTC(flight.destinationCity)}}</p>
+    <p class="date auxiliary-info">{{ flight.destinationDateTime | date: 'EEE, dd LLL YYYY' : getFullUTC(flight.destinationCity)}}</p>
     <div class="time">
       <p class="time-data">{{flight.destinationDateTime  | date: 'HH:mm' :  getFullUTC(flight.destinationCity)}}</p>
-      <p class="utc">UTC {{ getLocalUTC(flight.destinationCity) }}</p>
+      <p class="utc auxiliary-info">UTC {{ getLocalUTC(flight.destinationCity) }}</p>
     </div>
-    <p class="city">{{ flight.destinationCity }}</p>
+    <p class="city auxiliary-info">{{ flight.destinationCity }}</p>
   </div>
 
   <div class="flight-number">
-    <p class="label">Flight no.</p>
+    <p class="label auxiliary-info">Flight no.</p>
     <p>{{ flight.flightNumber }}</p>
   </div>
 
 </section>
 <section class="ticket">
   <div class="price-n-seats">
-
+    <p *ngIf="!selected">{{ flight.seats - flight.booked }} seats <br>available </p>
+    <p *ngIf="!selected" class="auxiliary-info">Price</p>
+    <p class="price">{{ flight.flightFare + flight.tax | currency:'EUR':'symbol-narrow' }}</p>
   </div>
   <button *ngIf="!selected; else edit" class="btn highlight-btn" (click)="selectFlight()">Select</button>
   <ng-template #edit>
