--- a/src/app/booking/pages/flight-selection-page/flight-selection-page.component.scss
+++ b/src/app/booking/pages/flight-selection-page/flight-selection-page.component.scss
@@ -6,6 +6,13 @@
   justify-content: flex-end;
 }
 
+.page {
+  padding: 3rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
 .search-results-section {
   display: flex;
   flex-direction: column;
