feat: add edit booking

--- a/src/app/shared/components/booking-table/booking-item/booking-item.component.html
+++ b/src/app/shared/components/booking-table/booking-item/booking-item.component.html
@@ -51,7 +51,7 @@
     </button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item class="menu-item" (click)="deleteBooking(booking)">Delete</button>
-      <button mat-menu-item (click)="editBooking()">Edit</button>
+      <button mat-menu-item (click)="editBooking(booking)">Edit</button>
     </mat-menu>
   </div>
 
