--- a/src/app/shared/components/date-picker-range/date-picker-range.component.html
+++ b/src/app/shared/components/date-picker-range/date-picker-range.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="fill" >
+<mat-form-field [appearance]="appearance" >
   <mat-label>Dates</mat-label>
   <mat-date-range-input [formGroup]="datesForm" [rangePicker]="picker">
     <input matStartDate [formControl]="datesForm.controls.departureDate" placeholder="Start date">
