--- a/src/app/shared/components/date-picker-single/date-picker-single.component.html
+++ b/src/app/shared/components/date-picker-single/date-picker-single.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="fill">
+<mat-form-field [appearance]="appearance">
   <mat-label>Date</mat-label>
   <input matInput [matDatepicker]="oneWayPicker" [formControl]="departureDate">
   <mat-datepicker-toggle matIconSuffix [for]="oneWayPicker"></mat-datepicker-toggle>
