--- a/src/app/main/components/flight-form/flight-form.component.scss
+++ b/src/app/main/components/flight-form/flight-form.component.scss
@@ -14,15 +14,19 @@
   font-weight: bold;
 }
 
-::ng-deep .mat-mdc-form-field-subscript-wrapper {
-  display: none;
-}
+// ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+//   display: none;
+// }
 
 .form-section {
   display: flex;
   flex-direction: row;
   width: 100%;
   gap: .5rem;
+}
+
+.validation-section {
+  justify-content: space-between;
 }
 
 .search-btn {
