--- a/src/variables.scss
+++ b/src/variables.scss
@@ -11,15 +11,16 @@
   --secondary-color: #0090BD; // цвет ссылок, фон иконок в breadcrmps (пройденные шаги), цвет дат в слайдере на странице выбора рейса
   --auxiliary-color: #74767A; // цвет для вспомогательных элементов (breadcrmps, labels и т.д.)
   --accent-bg-color: #FFFFFF; // цвет фона для попапов, диалоговых окон, всплывашек, форм
-  --error-color: #f34e41; // цвет сообщений об ошибках (валидация)
+  --error-color: #F34E41; // цвет сообщений об ошибках (валидация)
   --bg-neutral: #F4F6F9;
   --input-bg-color: #f5f5f5; //цвет для фона инпутов (как в MaterialUI)
-  --active-color: #3f51b5; //цвет активных декоративных элементов (как в MaterialUI)
+  --active-color: #3F51B5; //цвет активных декоративных элементов (как в MaterialUI)
   --disabled-color: #787879; // цвет текста для неактивных элементов (:disabled)
 
   --auxiliary-color-opacity02: #74767a33; // использован как фон хедера
-  --neutral-color-90: #f1f3f626; // использован как цвет кнопок хедера
+  --neutral-color-90: #F1F3F626; // использован как цвет кнопок хедера
   --contrast-bg-color: #F4F6F9;  // фон инпутов, некоторых кнопок на белом фоне
-  --neutral-color: #f1f3f6;
+  --neutral-color: #F1F3F6;
   --highlight-color: #7F8906;
+  --title-table-color: #F5F5F5;
 }
