--- a/src/app/shopping-cart/pages/cart-page.component.scss
+++ b/src/app/shopping-cart/pages/cart-page.component.scss
@@ -1,5 +1,5 @@
 .cart-container {
-  padding: 3.5rem;
+  padding:3.5rem 0;
 }
 
 p {
@@ -7,7 +7,7 @@ p {
 }
 
 .cart-title {
-  padding-bottom: 2.7rem;
+  padding: 0 2.7rem 3.5rem;
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 2.8rem;
