feat: update styles

--- a/src/app/account/pages/account-page/account-page.component.html
+++ b/src/app/account/pages/account-page/account-page.component.html
@@ -1,1 +1,3 @@
-<button class="primary-btn" (click)="logout()">Logout</button>
+<div class="wrapper page-wrapper">
+  <button class="btn primary-btn logout-btn" (click)="logout()">Logout</button>
+</div>
