--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,2 +1,5 @@
-<app-booking-settings-panel></app-booking-settings-panel>
-<router-outlet></router-outlet>
+<app-booking-settings-panel class="wrapper"></app-booking-settings-panel>
+<div class="wrapper">
+  <router-outlet></router-outlet>
+</div>
+
