--- a/src/app/main/pages/main-page.component.html
+++ b/src/app/main/pages/main-page.component.html
@@ -1,2 +1,4 @@
 <div class="background"></div>
-<app-flight-form></app-flight-form>
+<div class="wrapper main-wrapper">
+  <app-flight-form></app-flight-form>
+</div>
