--- a/src/app/shopping-cart/pages/cart-page.component.html
+++ b/src/app/shopping-cart/pages/cart-page.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cart-container">
+<mat-card class="cart-container wrapper">
   <p class="title cart-title">Cart</p>
   <app-booking-table></app-booking-table>
 </mat-card>
