--- a/src/app/main/components/flight-form/flight-form.component.scss
+++ b/src/app/main/components/flight-form/flight-form.component.scss
@@ -14,10 +14,6 @@
   font-weight: bold;
 }
 
-// ::ng-deep .mat-mdc-form-field-subscript-wrapper {
-//   display: none;
-// }
-
 .form-section {
   display: flex;
   flex-direction: row;
@@ -37,6 +33,19 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  position: relative;
+}
+
+.toggle-btn {
+  position: absolute;
+  z-index: 1;
+  width: 4rem;
+  height: 4rem;
+  right: 0;
+  top: calc(50% - 3.5rem);
+  background-color: var(--accent-bg-color);
+  border-radius: 100%;
+  border: 1px solid var(--auxiliary-color);
 }
 
 app-passengers-counter-form {
